fix test with multi part
Signed-off-by: Olivier Lamy <olamy@apache.org>